# openai-api-exemplo

./: README.md  pyproject.toml
notebook/: openai-api.ipynb
